<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tars.moneytracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.tars.moneytracker.ui.transaction.TransactionFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.tars.moneytracker.ui.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_graphs"
        android:name="com.tars.moneytracker.ui.graphs.GraphsFragment"
        android:label="@string/title_graphs"
        tools:layout="@layout/fragment_graphs" />




</navigation>