<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/transaction"
        android:title="@string/transaction" />
    <item android:id="@+id/income_expense_btn"
        android:icon="@drawable/floating_btn"
        android:title="+"
        />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/wallet"
        android:title="Wallet"

        />
    <item
        android:id="@+id/navigation_graphs"
        android:icon="@drawable/graph"
        android:title="@string/graphs" />






</menu>